kubernetes/production/plex/plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex-on-compooper
  namespace: prod
spec:
 type: ExternalName
 externalName: debens.app
 ports:
  - port: 32400
    targetPort: 32400
    protocol: TCP
    name: webapp
