kubernetes/production/plex/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex.debens.app
  namespace: prod
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.debens.app
      secretName: tls-prod-ingress-plex-http
  rules:
    - host: plex.debens.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-on-compooper
                port: 
                  name: webapp
